<resources>
    <string name="app_name">天气普拉斯</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="after_t">后天</string>

    <string name="hello_blank_fragment">blank fragment</string>
    <string name="today_title">今日详情</string>
    <string name="max_tmp">最高温</string>
    <string name="min_tmp">最低温</string>
    <string name="rainfall">降水量</string>
    <string name="hum">湿度</string>
    <string name="pressure">气压</string>
    <string name="visible">能见度</string>
    <string name="air_quality">空气质量</string>
    <string name="pm2_5">PM2.5</string>
    <string name="so2">SO₂</string>
    <string name="pm10">PM10</string>
    <string name="no2">NO₂</string>
    <string name="co">CO</string>
    <string name="o3">O³</string>
    <string name="sun_moon">太阳和月亮</string>
    <string name="setting">设置</string>
    <string name="control_city">城市管理</string>
    <string name="choose_lang">语言选择</string>
    <string name="english">英文</string>
    <string name="chinese">中文</string>
    <string name="system_lang">系统语言</string>
    <string name="choose_unit">单位选择</string>
    <string name="hua">华氏度</string>
    <string name="she">摄氏度</string>
    <string name="choose_text_size">字体大小</string>
    <string name="small">小</string>
    <string name="mid">中</string>
    <string name="large">大</string>
    <string name="about">关于</string>
    <string name="now_version">当前版本</string>
    <string name="add_city">添加城市</string>
    <string name="nearly_search">最近搜索</string>
    <string name="forecast">预报</string>
    <string name="now">.  现在</string>
    <string name="beijing">北京</string>
    <string name="shanghai">上海</string>
    <string name="guangzhou">广州</string>
    <string name="shenzhen">深圳</string>
    <string name="hangzhou">杭州</string>
    <string name="chongqing">重庆</string>
    <string name="wuhan">武汉</string>
    <string name="xian">西安</string>
    <string name="Ner_York">纽约</string>
    <string name="Paris">巴黎</string>
    <string name="Moscow">莫斯科</string>
    <string name="London">伦敦</string>
    <string name="HongKong">香港</string>
    <string name="Singapore">新加坡</string>
    <string name="Sydney">悉尼</string>
    <string name="Tokyo">东京</string>
    <string name="Dubai">迪拜</string>
    <string name="Berlin">柏林</string>
    <string name="Amsterdam">阿姆斯特丹</string>
    <string name="Seoul">首尔</string>
    <string name="Zurich">苏黎世</string>
    <string name="Toronto">多伦多</string>
    <string name="Cape_Town">开普敦</string>
    <string name="Bangkok">曼谷</string>
    <string name="Madrid">马德里</string>
    <string name="Popular_Location">热门城市</string>
    <string name="powered">Powered By heweather.com</string>

</resources>
