<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_ececec"
    tools:context=".view.activity.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/back_white">

        <ImageView
            android:id="@+id/iv_about_back"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingStart="16dp"
            android:paddingEnd="10dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/color_212121"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/iv_about1"
            android:layout_width="103dp"
            android:layout_height="88dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/icon_icon" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_about1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/color_212121"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_hua"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:background="@color/color_fafafa"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/now_version"
            android:textColor="@color/color_4a4a4a"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_version_num"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="1.1.2"
            android:textColor="@color/color_a4a4a4"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>